RESOLVED FIXED83521
platform/graphics/skia/GlyphPageTreeNodeSkia.cpp mis-use 'continue' for 'break'
https://bugs.webkit.org/show_bug.cgi?id=83521
Summary platform/graphics/skia/GlyphPageTreeNodeSkia.cpp mis-use 'continue' for 'break'
Xiaomei Ji
Reported 2012-04-09 16:14:23 PDT
In function GlyphPage::fill(), Line 103, "continue" should be changed to 'break".
Attachments
patch (1.27 KB, patch)
2012-04-11 10:28 PDT, Xiaomei Ji
no flags
patch (1.32 KB, patch)
2012-04-11 10:49 PDT, Xiaomei Ji
no flags
patch (1.31 KB, patch)
2012-04-11 23:51 PDT, Xiaomei Ji
levin: review+
patch (1.63 KB, patch)
2012-04-16 14:02 PDT, Xiaomei Ji
levin: review+
patch (1.60 KB, patch)
2012-04-16 15:26 PDT, Xiaomei Ji
no flags
Xiaomei Ji
Comment 1 2012-04-11 10:28:03 PDT
WebKit Review Bot
Comment 2 2012-04-11 10:30:55 PDT
Attachment 136692 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xiaomei Ji
Comment 3 2012-04-11 10:49:14 PDT
Xiaomei Ji
Comment 4 2012-04-11 23:51:38 PDT
Xiaomei Ji
Comment 5 2012-04-16 14:02:18 PDT
Xiaomei Ji
Comment 6 2012-04-16 15:26:48 PDT
Created attachment 137416 [details] patch sync and resolve conflict for ews and cq.
WebKit Review Bot
Comment 7 2012-04-16 16:32:32 PDT
Comment on attachment 137416 [details] patch Clearing flags on attachment: 137416 Committed r114316: <http://trac.webkit.org/changeset/114316>
WebKit Review Bot
Comment 8 2012-04-16 16:32:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.