platform/graphics/skia/GlyphPageTreeNodeSkia.cpp mis-use 'continue' for 'break' https://bugs.webkit.org/show_bug.cgi?id=83521

Reviewed by David Levin.

No functionality change, so no new tests.

* platform/graphics/skia/GlyphPageTreeNodeSkia.cpp:
(WebCore::GlyphPage::fill):


Canonical link: https://commits.webkit.org/101589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114316 268f45cc-cd09-0410-ab3c-d52691b4dbfc